--- a/src/css/components/_articles-list.scss
+++ b/src/css/components/_articles-list.scss
@@ -34,6 +34,10 @@
         margin-bottom: $spacing-small;
     }
 
+    .lede {
+        margin-bottom: $spacing-medium;
+    }
+
     .date {
         @extend %delta;
         margin-bottom: $spacing-small;
