--- a/src/css/components/_nav-secondary.scss
+++ b/src/css/components/_nav-secondary.scss
@@ -47,7 +47,7 @@
 
     .page-about & {
         border-top: 0;
-        padding: $spacing-medium 0;
+        padding: 0 0 $spacing-medium;
     }
 
     %content-elements + & {
